Added Eigen libs, but it seems that the for-loops are better looking with C-style arrays.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,9 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "*.ipp": "cpp",
-        "slist": "cpp"
+        "slist": "cpp",
+        "dense": "cpp",
+        "core": "cpp",
+        "hash_map": "cpp"
     }
 }
