--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,9 +36,6 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "*.ipp": "cpp",
-        "slist": "cpp",
-        "dense": "cpp",
-        "core": "cpp",
-        "hash_map": "cpp"
+        "slist": "cpp"
     }
 }
